# qryma-python

./: .gitignore  README.md  pyproject.toml
qryma/: __init__.py  client.py  version.py
tests/: __init__.py  test_search.py
